manifests/14_validating_admission_policy_binding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "openshift-storage-policy-validation-binding"
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  policyName: "openshift-storage-policy-validation"
  validationActions: [Deny]
  matchResources:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["namespaces"]
      scope: "*"
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector: {}
